--- a/html.html
+++ b/html.html
@@ -78,27 +78,29 @@
                                                                                        <aside class="side-menu">
                                                                                            <ul>
                                                                                                <li>
-                                                                                                   <a href="">
+                                                                                               <a href="" target="_blank"> 
+                                                                                                       
                                                                                                        o nas
-                                                                                                   </a>
+                                                                                                       </a>
+                                                                                                 
                                                                                                </li>
                                                                                                <li>
-                                                                                                   <a href="">
+                                                                                                 <a href="sklep.html" target="_blank"> 
                                                                                                        sklep
                                                                                                    </a>
                                                                                                </li>
                                                                                                <li>
-                                                                                                   <a href="">
+                                                                                            <a href="" target="_blank"> 
                                                                                                        Yet another one
                                                                                                    </a>
                                                                                                </li>
                                                                                                <li>
-                                                                                                   <a href="">
+                                                                                                   <a href="" target="_blank"> 
                                                                                                        Subscribe!
                                                                                                    </a>
                                                                                                </li>
                                                                                                <li>
-                                                                                                   <a href="">
+                                                                                                  <a href="" target="_blank"> 
                                                                                                        Foo
                                                                                                    </a>
                                                                                                </li>
