--- a/html.html
+++ b/html.html
@@ -85,7 +85,7 @@
                                                                                                  
                                                                                                </li>
                                                                                                <li>
-                                                                                                 <a href="sklep.html" target="_blank"> 
+                                                                                                 <a href="sklep.html" > 
                                                                                                        sklep
                                                                                                    </a>
                                                                                                </li>
