--- a/html.html
+++ b/html.html
@@ -78,7 +78,7 @@
                                                                                        <aside class="side-menu">
                                                                                            <ul>
                                                                                                <li>
-                                                                                               <a href="" target="_blank"> 
+                                                                                               <a href="" > 
                                                                                                        
                                                                                                        o nas
                                                                                                        </a>
@@ -90,17 +90,17 @@
                                                                                                    </a>
                                                                                                </li>
                                                                                                <li>
-                                                                                            <a href="" target="_blank"> 
+                                                                                            <a href=""> 
                                                                                                        Yet another one
                                                                                                    </a>
                                                                                                </li>
                                                                                                <li>
-                                                                                                   <a href="" target="_blank"> 
+                                                                                                   <a href=""> 
                                                                                                        Subscribe!
                                                                                                    </a>
                                                                                                </li>
                                                                                                <li>
-                                                                                                  <a href="" target="_blank"> 
+                                                                                                  <a href=""> 
                                                                                                        Foo
                                                                                                    </a>
                                                                                                </li>
