--- a/sklep.html
+++ b/sklep.html
@@ -11,12 +11,12 @@
 
  </head>
  <body>
-
-    <img src="imgs 1.jpg" />
-
-    <img src="imgs 2.jpg" />
-
-    <img src="imgs 3.jpg" />
+     <h3> Klatka dla papugi            </h3>
+     <img src="imgs 1.jpg" />
+     <h3> Zabawka dla papugi gra w koszykówke            </h3>
+     <img src="imgs 2.jpg" />
+     <h3> Patyk dla papugi          </h3>
+     <img src="imgs 3.jpg" />
 
  </body>
 </html>
