--- a/htm.html
+++ b/htm.html
@@ -73,9 +73,9 @@
 
 
          <div id="nav">
-             <a href="" target="_blank"> Romelu Lukaku </a> <br />
-              <a href=" " target="_blank">Lionel Messi </a> <br />
-             <a href=" " target="_blank">Robert Lewandowski </a> <br />
+             <a href="https://pl.wikipedia.org/wiki/Romelu_Lukaku" target="_blank"> Romelu Lukaku </a> <br />
+              <a href="https://pl.wikipedia.org/wiki/Lionel_Messi " target="_blank">Lionel Messi </a> <br />
+             <a href=" https://pl.wikipedia.org/wiki/Robert_Lewandowski" target="_blank">Robert Lewandowski </a> <br />
              
             
 
