--- a/htm.html
+++ b/htm.html
@@ -24,7 +24,7 @@
         }
 
         #nav {
-            background-color: lightgoldenrodyellow;
+            background-color: dodgerblue;
             float: left;
             width: 290px;
             min-height: 3952px;
