--- a/strona.HTML
+++ b/strona.HTML
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <a href="wirus.html">
+    <a href="wirus.HTML">
             <button type="button">Finish!</button>
         </a>
 
